# PRALAYA-NET

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  ENHANCEMENT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_ULTIMATE.md  RESPONSIVE_VISUAL_SUMMARY.md  SETUP.md  TESTING.md  TODO.md  TODO_DEPLOY.md  TODO_DRONEDASHBOARD.md  TODO_FIXES.md  VERIFICATION_REPORT.md  launch_demo.py  launch_system.py  render.yaml  render_demo.yaml  start_production_system.bat  start_production_system.py  start_production_system.sh  test_system.py  test_system_complete.py  validate_demo_system.py
backend/: Dockerfile  app.py  config.py  demo_main.py  main.py  middleware.py  pyproject.toml  render-start.sh  render.yaml  requirements.txt  requirements_simple.txt
backend/ai/: __init__.py  flood_predictor.py  graph_risk.py  satellite_ai.py  space_weather.py
backend/api/: alerts_api.py  drone_api.py  drone_fleet_api.py  risk_alert_api.py  satellite_api.py  trigger_api.py
backend/drone/: __init__.py  drone_controller.py  slam_mode.py  telemetry.py
backend/orchestration/: __init__.py  alert_manager.py  decision_engine.py
backend/services/: digital_twin_cascade_forecast.py  enhanced_stability_index_service.py  lightweight_prediction.py  real_data_ingestion.py
dashboard/: .env.demo  .env.development  .env.example  .env.production  index.html  netlify.toml  netlify_demo.toml  package-lock.json  package.json  vercel.json  vite.config.js
docs/: architecture.md  cascading-risk.md  data-flow.md  demo-script.md
drone_simulation/: README.md  config.json  visual_slam.py
(+31 files in other folders)
