[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pralaya-net-backend"
version = "1.0.0"
description = "PRALAYA-NET Backend - Autonomous Disaster Response Command Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.3",
    "websockets>=12.0",
]

[project.optional-dependencies]
full = [
    "numpy>=1.26.0",
    "networkx>=3.3",
    "requests>=2.31.0",
    "pillow>=10.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

